# bayesianlearning

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile~  Ex1  Makefile  Test.cpp  Test.cpp~  cmake_install.cmake  gram.py~
data/: #regression_time.py#  .#regression_time.py  corn_m5_test.csv  corn_m5_train.csv  corn_y_test.csv  corn_y_train.csv  make_data_set.py  make_data_set.py~  regression_time.py~  spectres.py  spectres.py~  synth_test.csv  synth_train.csv  synth_y_test.csv  synth_y_train.csv
doc/html/: annotated.html  bayesridge_8cpp.html  bayesridge_8cpp__incl.dot  bayesridge_8cpp__incl.md5  bayesridge_8hpp.html  bayesridge_8hpp__dep__incl.dot  bayesridge_8hpp__dep__incl.md5  bayesridge_8hpp__incl.dot  bayesridge_8hpp__incl.md5  bayesridge_8hpp_source.html  classBayesianRidge-members.html  classBayesianRidge.html  classes.html  classrvmr_1_1RVMR-members.html  classrvmr_1_1RVMR.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  formula.repository  functions.html  functions_func.html  graph_legend.html  index.html  rvmr_8hpp.html  rvmr_8hpp__dep__incl.dot  rvmr_8hpp__dep__incl.md5  rvmr_8hpp__incl.dot  rvmr_8hpp__incl.md5  rvmr_8hpp_source.html  utils_8cpp.html  (+9 more)
exemple/: #CMakeLists.txt#  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: #ard_regression_test.cpp#  #bayesian_ridge_test.cpp#  .#ard_regression_test.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  Test.cpp  ard_regression_test.cpp  ard_regression_test.cpp~  bayesian_ridge_test.cpp  bayesian_ridge_test.cpp~  bayesridge.cpp  bayesridge.cpp~  bayesridge.hpp  bayesridge.hpp~  cmake_install.cmake  rvmr.cpp~  rvmr.hpp  rvmr.hpp~  rvmr_impl.hpp  rvmr_impl.hpp~  utils.cpp
(+41 files in other folders)
